# qdrant-mcp

./: .gitignore  README.md  pyproject.toml
src/qdrant_mcp/: server.py
tests/integration/: test_qdrant_integration.py
tests/unit/: test_chunk_header.py
