[project]
name = "qdrant-mcp"
version = "0.1.0"
description = "MCP server for document ingestion and vector search with MarkItDown + OpenAI Embeddings + Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.8.0",
  "markitdown[all]>=0.1.1",
  "openai>=1.79.0",
  "qdrant-client>=1.9.0",
]

[project.scripts]
qdrant-mcp = "qdrant_mcp.server:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qdrant_mcp"]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
]
